--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dev_dependencies:
   flutter_staggered_grid_view: ^0.3.2
   webview_flutter: any
   centrifuge: ^0.5.1
+  flutter_bloc: ^6.1.1
   amplitude_flutter: ^2.2.2
   video_player: ^1.0.1
   transparent_image: ^1.0.0
